--- a/E-Poster/MainWindow.xaml
+++ b/E-Poster/MainWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:E_Poster"
         mc:Ignorable="d"
-        Title="MainWindow"  WindowStyle="SingleBorderWindow" AllowsTransparency="False" ResizeMode="CanResize" MouseLeftButtonDown="Window_MouseLeftButtonDown" WindowStartupLocation="CenterScreen" Topmost="True"  WindowState="Maximized">
+        Title="MainWindow"  WindowStyle="None" AllowsTransparency="False" ResizeMode="CanResize" MouseLeftButtonDown="Window_MouseLeftButtonDown" WindowStartupLocation="CenterScreen" Topmost="True"  WindowState="Normal">
     <Frame Name="MainFrame" NavigationUIVisibility="Hidden" ScrollViewer.VerticalScrollBarVisibility="Auto">
     </Frame>
 </Window>
