10-14修改5个bug提交

--- a/E-Poster/PaperList.xaml
+++ b/E-Poster/PaperList.xaml
@@ -133,7 +133,7 @@
                                     <ColumnDefinition Width="74"/>
                                 </Grid.ColumnDefinitions>
                                 <TextBox Name="txt_keyword" Background="Transparent" Grid.Column="0" VerticalAlignment="Center"  Text="{DynamicResource txt_search}" FontSize="28" Width="440" HorizontalContentAlignment="Center" Foreground="#999999" BorderThickness="0,0,0,0" GotFocus="TxtSearch_GotFocus" LostFocus="TxtSearch_LostFocus"/>
-                                <Button Name="btn_search" Width="37" Height="37" Background="Transparent" Grid.Column="1" BorderThickness="0,0,0,0" Click="Btn_Search_Click">
+                                <Button Name="btn_search" Width="40" Height="40" Background="Transparent" Grid.Column="1" BorderThickness="0,0,0,0" Click="Btn_Search_Click">
                                     <Image   Source="pack://application:,,,/resources/search.png"></Image>
                                 </Button>
                             </Grid>
@@ -171,8 +171,8 @@ TextBlock.Foreground="{TemplateBinding Foreground}"/>
                         </ListBox>
                     </Grid>
                 </StackPanel>
-                <StackPanel Name="mengban" Background="#404851" Opacity="0.2" Grid.Column="1" Visibility="Hidden"  GotFocus="Button_Click_1">
-                </StackPanel>
+                <Button Name="mengban" Background="#404851" Opacity="0.2" Grid.Column="1" Height="1920" BorderThickness="0,0,0,0" Click="Button_Click_1">
+                </Button>
             </Grid>
 
             <!--头部banner图 根据不同的会议可配置-->
@@ -215,7 +215,7 @@ TextBlock.Foreground="{TemplateBinding Foreground}"/>
                                 </Grid.ColumnDefinitions>
                                 <Image Source="pack://application:,,,/resources/icon.png" VerticalAlignment="Center" HorizontalAlignment="Left" Grid.Column="0" Width="21" Height="21" Grid.Row="0"/>
                                 <ScrollViewer  HorizontalScrollBarVisibility="Hidden" VerticalScrollBarVisibility="Hidden" HorizontalAlignment="Left" VerticalAlignment="Center"  Grid.Row="0" Grid.Column="1" >
-                                    <ItemsControl ItemsSource="{Binding paper_title}" Foreground="#000524" FontWeight="Bold" FontSize="26" >
+                                    <ItemsControl Name="pTitle" ItemsSource="{Binding display_title}"  Foreground="#000524" FontWeight="Bold" FontSize="26" >
                                         <ItemsControl.ItemsPanel>
                                             <ItemsPanelTemplate>
                                                 <StackPanel Orientation="Horizontal"/>
@@ -242,7 +242,7 @@ TextBlock.Foreground="{TemplateBinding Foreground}"/>
                                         <TextBlock Text="{Binding first_author}" TextAlignment="Center" FontSize="18"/>
                                     </StackPanel>
                                     <StackPanel Orientation="Horizontal"  Grid.Column="1">
-                                        <TextBlock Text="{DynamicResource first_author_org}" Foreground="#019DD5" FontSize="18"/>
+                                        <TextBlock Text="{DynamicResource first_author_org}" Foreground="#019DD5" FontSize="18" Padding="20,0,0,0"/>
                                         <TextBlock Text="{Binding first_author_org}" FontSize="18"/>
                                     </StackPanel>
                                     <StackPanel Orientation="Horizontal"  Grid.Column="2" HorizontalAlignment="Right">
@@ -282,11 +282,9 @@ TextBlock.Foreground="{TemplateBinding Foreground}"/>
 
             <!--底部图片 可配置-->
             <Image x:Name="bottom" Grid.Row="2" Grid.ColumnSpan="2" Stretch="None"/>
-            <!--程序关闭按钮-->
-            <Canvas Grid.Row="2" Grid.ColumnSpan="2">
+            <Canvas>
                 <Button Name="close" Click="APP_Closed" Content="close" Canvas.Right="20" Canvas.Bottom="20" Background="Transparent"></Button>
             </Canvas>
-
         </Grid>
     </Viewbox>
 </Page>
