--- a/E-Poster/PaperDetail.xaml
+++ b/E-Poster/PaperDetail.xaml
@@ -13,8 +13,8 @@
                 <BeginStoryboard>
                     <Storyboard>
                         <!--<ThicknessAnimation Duration="0:0:.85" Storyboard.TargetProperty="Margin" From="900,0,-900,0" To="0" DecelerationRatio=".9" />-->
-                        <ThicknessAnimation Duration="0:0:.45" Storyboard.TargetProperty="Margin" From="50,0,-50,0" To="0" DecelerationRatio=".9" />
-                        <DoubleAnimation Duration="0:0:.35" Storyboard.TargetProperty="Opacity" From="0" To="1" />
+                        <ThicknessAnimation Duration="0:0:1" Storyboard.TargetProperty="Margin" From="50,0,-50,0" To="0" DecelerationRatio=".9" />
+                        <DoubleAnimation Duration="0:0:1" Storyboard.TargetProperty="Opacity" From="0" To="1" />
                     </Storyboard>
                 </BeginStoryboard>
             </EventTrigger.Actions>
@@ -33,8 +33,13 @@
     <Viewbox>
         <Grid Width="1080" Height="1920">
             <Viewbox Stretch="Fill">
+
                 <Image HorizontalAlignment="Center" VerticalAlignment="Center"  Name="imgViewer" Source="{Binding CurImg}"/>
+                
             </Viewbox>
+            <Canvas  HorizontalAlignment="Center" VerticalAlignment="Center" Panel.ZIndex="-1">
+                <TextBlock Text="{DynamicResource no_data}" Foreground="#999999" FontSize="26"  Margin="-125,0,0,0"></TextBlock>
+            </Canvas>
             <!-- 上一页 -->
             <Button x:Name="Last" Style="{StaticResource DefaultButton}"  Margin="0,190,26,0" Command="{Binding LastClickCommand}">
                 <Button.Template>
@@ -71,6 +76,7 @@
                     </ControlTemplate>
                 </Button.Template>
             </Button>
+
         </Grid>
     </Viewbox>
 </Page>
