1、中英文切换，不强行取英文title 2、底部bottom可配置显示或不显示 3、修改其他等bug

--- a/E-Poster/PaperList.xaml
+++ b/E-Poster/PaperList.xaml
@@ -215,27 +215,12 @@ TextBlock.Foreground="{TemplateBinding Foreground}"/>
                                     <ColumnDefinition Width="*"/>
                                 </Grid.ColumnDefinitions>
                                 <Image Source="pack://application:,,,/resources/icon.png" VerticalAlignment="Center" HorizontalAlignment="Left" Grid.Column="0" Width="21" Height="21" Grid.Row="0"/>
-                                <!--<ScrollViewer  HorizontalScrollBarVisibility="Hidden" VerticalScrollBarVisibility="Hidden" HorizontalAlignment="Left" VerticalAlignment="Center"  Grid.Row="0" Grid.Column="1" >
-                                    <ItemsControl Name="pTitle" ItemsSource="{Binding display_title}"  Foreground="#000524" FontWeight="Bold" FontSize="26" >
-                                        <ItemsControl.ItemsPanel>
-                                            <ItemsPanelTemplate>
-                                                <StackPanel Orientation="Horizontal"/>
-                                            </ItemsPanelTemplate>
-                                        </ItemsControl.ItemsPanel>
-                                        <ItemsControl.ItemTemplate>
-                                            <DataTemplate>
-                                                <Border Margin="1">
-                                                    <ContentPresenter Content="{Binding}"/>
-                                                </Border>
-                                            </DataTemplate>
-                                        </ItemsControl.ItemTemplate>
-                                    </ItemsControl>
-                                </ScrollViewer>-->
+                              
                                 <ScrollViewer Name="slv" 
                                       VerticalScrollBarVisibility="Hidden"
                                       HorizontalScrollBarVisibility="Hidden"
                                       HorizontalAlignment="Left" VerticalAlignment="Center"  Grid.Row="0" Grid.Column="1" >
-                                    <Label Content="{Binding display_title, Mode=OneWay}"  
+                                    <Label Content="{Binding paper_title, Mode=OneWay}"  
                                        VerticalContentAlignment="Center" 
                                        HorizontalContentAlignment="Center" 
                                            Foreground="#000524" FontWeight="Bold" FontSize="26"
